# mlops-demo

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/: train_data.csv
models/: model.pkl
reports/: drift_metrics.json
src/: api.py  generate_drift_data.py  generate_train_data.py  monitor.py  retrain.py  simulate_request.py  train.py
templates/: index.html
