[project]
name = "mlops-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "evidently>=0.7.21",
    "fastapi>=0.136.1",
    "joblib>=1.5.3",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.46.0",
    "jinja2>=3.1.6",
    "dvc-gs>=3.0.2",
]